[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/spr_player_default_strip.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/spr_player_jump.png" type="Texture" id=3]
[ext_resource path="res://Sprites/spr_player_walk_right_strip.png" type="Texture" id=4]
[ext_resource path="res://Audio/Splat.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/PlayerJumping.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/PlayerWalking.wav" type="AudioStream" id=7]
[ext_resource path="res://Objects/Giant Press/Timer.gd" type="Script" id=8]
[ext_resource path="res://Font/8BitText.ttf" type="DynamicFontData" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 15 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Walking",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="GDScript" id=17]

[node name="Player_Container" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="." groups=[
"player",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 17 )
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="Player"]
position = Vector2( -10, 0 )
enabled = true
cast_to = Vector2( 0, 17 )
collide_with_areas = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 15 )
animation = "Idle"
playing = true

[node name="PlayerWalk" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 7 )
volume_db = 10.0

[node name="PlayerJump" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 6 )
volume_db = 10.0

[node name="PlayerFall" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource( 5 )
volume_db = 10.0

[node name="TimerText" type="RichTextLabel" parent="."]
margin_left = 738.0
margin_top = 48.0
margin_right = 792.0
margin_bottom = 109.0
custom_fonts/normal_font = SubResource( 16 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="TimerText"]
autostart = true
script = SubResource( 17 )
[connection signal="timeout" from="TimerText/Timer" to="TimerText" method="_on_Timer_timeout"]
